<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="co.fouani.postmanager.utils.Utility" />

        <variable
            name="vm"
            type="co.fouani.postmanager.ui.viewmodels.PostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:indeterminate="true"
            android:visibility="@{ Utility.getVisibility (vm.isProcessing) }"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{ vm.isCreate() ? @string/create_post : @string/edit_post }"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/create_post" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:enabled="@{!vm.isProcessing}"
            android:hint="@string/title"
            android:inputType="text"
            android:text="@={vm.title}"
            app:layout_constraintTop_toBottomOf="@+id/header_title" />

        <EditText
            android:id="@+id/body_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="@{!vm.isProcessing}"
            android:hint="@string/enter_description"
            android:text="@={vm.body}"
            app:layout_constraintTop_toBottomOf="@+id/title_et" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@{vm.savable? @color/green : @color/grey }"
            android:enabled="@{vm.savable}"
            android:onClick="@{()->vm.onSave()}"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/body_et"
            tools:backgroundTint="@color/green" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>