<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="co.fouani.postmanager.utils.Utility" />

        <variable
            name="post"
            type="co.fouani.postmanager.ui.viewmodels.PostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.PostDetailsActivity">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@{post.title}"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/title_label"
            tools:text="@string/title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="#F4F4F4"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/body_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/body"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@={post.shortBody}"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/body_label"
            tools:text="@string/body" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->post.toggleBody()}"
            android:padding="6dp"
            android:layout_marginEnd="16dp"
            android:text="@{post.shortBody.equals(post.body)? @string/hide : @string/read_more}"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/body"
            tools:text="@string/read_more" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>